frontend/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declaration
Rule 3     declarations -> declarations declaration
Rule 4     declaration -> globaldec
Rule 5     declaration -> globaldef
Rule 6     declaration -> fundec
Rule 7     declaration -> fundef
Rule 8     globaldec -> EXTERN type ID SEMICOL
Rule 9     globaldef -> STATIC type ID ASSIGN expr SEMICOL
Rule 10    globaldef -> type ID ASSIGN expr SEMICOL
Rule 11    fundec -> EXTERN funheader SEMICOL
Rule 12    fundec -> EXTERN funheader_varargs SEMICOL
Rule 13    fundef -> funheader LBRACE RBRACE
Rule 14    fundef -> funheader LBRACE statements RBRACE
Rule 15    fundef -> STATIC funheader LBRACE RBRACE
Rule 16    fundef -> STATIC funheader LBRACE statements RBRACE
Rule 17    funheader -> type ID LPAREN RPAREN
Rule 18    funheader -> type ID LPAREN params RPAREN
Rule 19    funheader_varargs -> type ID LPAREN DOTS RPAREN
Rule 20    funheader_varargs -> type ID LPAREN params COMMA DOTS RPAREN
Rule 21    params -> type ID
Rule 22    params -> params COMMA type ID
Rule 23    statements -> statement
Rule 24    statements -> statements statement
Rule 25    statement -> LBRACE RBRACE
Rule 26    statement -> LBRACE statements RBRACE
Rule 27    statement -> type ID ASSIGN expr SEMICOL
Rule 28    statement -> type LBRACKET expr RBRACKET ID SEMICOL
Rule 29    statement -> ID ASSIGN expr SEMICOL
Rule 30    statement -> index ASSIGN expr SEMICOL
Rule 31    statement -> ID MODIFY expr SEMICOL
Rule 32    statement -> index MODIFY expr SEMICOL
Rule 33    statement -> expr SEMICOL
Rule 34    statement -> IF LPAREN expr RPAREN statement
Rule 35    statement -> IF LPAREN expr RPAREN statement ELSE statement
Rule 36    statement -> WHILE LPAREN expr RPAREN statement
Rule 37    statement -> DO statement WHILE LPAREN expr RPAREN SEMICOL
Rule 38    statement -> FOR LPAREN type ID ASSIGN expr TO expr RPAREN statement
Rule 39    statement -> BREAK SEMICOL
Rule 40    statement -> CONTINUE SEMICOL
Rule 41    statement -> RETURN SEMICOL
Rule 42    statement -> RETURN expr SEMICOL
Rule 43    expr -> ID
Rule 44    index -> expr LBRACKET expr RBRACKET
Rule 45    expr -> index
Rule 46    expr -> LPAREN expr RPAREN
Rule 47    expr -> expr PLUS expr
Rule 48    expr -> expr MINUS expr
Rule 49    expr -> expr TIMES expr
Rule 50    expr -> expr DIVIDE expr
Rule 51    expr -> expr MODULO expr
Rule 52    expr -> expr EQ expr
Rule 53    expr -> expr NE expr
Rule 54    expr -> expr LT expr
Rule 55    expr -> expr GT expr
Rule 56    expr -> expr LE expr
Rule 57    expr -> expr GE expr
Rule 58    expr -> expr AND expr
Rule 59    expr -> expr OR expr
Rule 60    expr -> NOT expr
Rule 61    expr -> MINUS expr
Rule 62    expr -> INV expr
Rule 63    expr -> funcall
Rule 64    funcall -> ID LPAREN RPAREN
Rule 65    funcall -> ID LPAREN exprs RPAREN
Rule 66    exprs -> expr
Rule 67    exprs -> exprs COMMA expr
Rule 68    expr -> BOOLCONST
Rule 69    expr -> CHARCONST
Rule 70    expr -> INTCONST
Rule 71    expr -> FLOATCONST
Rule 72    expr -> HEXCONST
Rule 73    expr -> STRINGCONST
Rule 74    type -> TYPE
Rule 75    type -> type BRACKETS

Terminals, with rules where they appear

AND                  : 58
ASSIGN               : 9 10 27 29 30 38
BOOLCONST            : 68
BRACKETS             : 75
BREAK                : 39
CHARCONST            : 69
COMMA                : 20 22 67
CONTINUE             : 40
DIVIDE               : 50
DO                   : 37
DOTS                 : 19 20
ELSE                 : 35
EQ                   : 52
EXTERN               : 8 11 12
FLOATCONST           : 71
FOR                  : 38
GE                   : 57
GT                   : 55
HEXCONST             : 72
ID                   : 8 9 10 17 18 19 20 21 22 27 28 29 31 38 43 64 65
IF                   : 34 35
INTCONST             : 70
INV                  : 62
LBRACE               : 13 14 15 16 25 26
LBRACKET             : 28 44
LE                   : 56
LPAREN               : 17 18 19 20 34 35 36 37 38 46 64 65
LT                   : 54
MINUS                : 48 61
MODIFY               : 31 32
MODULO               : 51
NE                   : 53
NOT                  : 60
OR                   : 59
PLUS                 : 47
RBRACE               : 13 14 15 16 25 26
RBRACKET             : 28 44
RETURN               : 41 42
RPAREN               : 17 18 19 20 34 35 36 37 38 46 64 65
SEMICOL              : 8 9 10 11 12 27 28 29 30 31 32 33 37 39 40 41 42
STATIC               : 9 15 16
STRINGCONST          : 73
TIMES                : 49
TO                   : 38
TYPE                 : 74
WHILE                : 36 37
error                : 

Nonterminals, with rules where they appear

declaration          : 2 3
declarations         : 1 3
expr                 : 9 10 27 28 29 30 31 32 33 34 35 36 37 38 38 42 44 44 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 62 66 67
exprs                : 65 67
funcall              : 63
fundec               : 6
fundef               : 7
funheader            : 11 13 14 15 16
funheader_varargs    : 12
globaldec            : 4
globaldef            : 5
index                : 30 32 45
params               : 18 20 22
program              : 0
statement            : 23 24 34 35 35 36 37 38
statements           : 14 16 24 26
type                 : 8 9 10 17 18 19 20 21 22 27 28 38 75

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declaration
    (3) declarations -> . declarations declaration
    (4) declaration -> . globaldec
    (5) declaration -> . globaldef
    (6) declaration -> . fundec
    (7) declaration -> . fundef
    (8) globaldec -> . EXTERN type ID SEMICOL
    (9) globaldef -> . STATIC type ID ASSIGN expr SEMICOL
    (10) globaldef -> . type ID ASSIGN expr SEMICOL
    (11) fundec -> . EXTERN funheader SEMICOL
    (12) fundec -> . EXTERN funheader_varargs SEMICOL
    (13) fundef -> . funheader LBRACE RBRACE
    (14) fundef -> . funheader LBRACE statements RBRACE
    (15) fundef -> . STATIC funheader LBRACE RBRACE
    (16) fundef -> . STATIC funheader LBRACE statements RBRACE
    (74) type -> . TYPE
    (75) type -> . type BRACKETS
    (17) funheader -> . type ID LPAREN RPAREN
    (18) funheader -> . type ID LPAREN params RPAREN

    EXTERN          shift and go to state 6
    STATIC          shift and go to state 12
    TYPE            shift and go to state 4

    globaldec                      shift and go to state 7
    fundef                         shift and go to state 1
    funheader                      shift and go to state 2
    declaration                    shift and go to state 10
    declarations                   shift and go to state 8
    fundec                         shift and go to state 9
    program                        shift and go to state 3
    type                           shift and go to state 5
    globaldef                      shift and go to state 11

state 1

    (7) declaration -> fundef .

    EXTERN          reduce using rule 7 (declaration -> fundef .)
    STATIC          reduce using rule 7 (declaration -> fundef .)
    TYPE            reduce using rule 7 (declaration -> fundef .)
    $end            reduce using rule 7 (declaration -> fundef .)


state 2

    (13) fundef -> funheader . LBRACE RBRACE
    (14) fundef -> funheader . LBRACE statements RBRACE

    LBRACE          shift and go to state 13


state 3

    (0) S' -> program .



state 4

    (74) type -> TYPE .

    ID              reduce using rule 74 (type -> TYPE .)
    BRACKETS        reduce using rule 74 (type -> TYPE .)
    LBRACKET        reduce using rule 74 (type -> TYPE .)


state 5

    (10) globaldef -> type . ID ASSIGN expr SEMICOL
    (75) type -> type . BRACKETS
    (17) funheader -> type . ID LPAREN RPAREN
    (18) funheader -> type . ID LPAREN params RPAREN

    ID              shift and go to state 15
    BRACKETS        shift and go to state 14


state 6

    (8) globaldec -> EXTERN . type ID SEMICOL
    (11) fundec -> EXTERN . funheader SEMICOL
    (12) fundec -> EXTERN . funheader_varargs SEMICOL
    (74) type -> . TYPE
    (75) type -> . type BRACKETS
    (17) funheader -> . type ID LPAREN RPAREN
    (18) funheader -> . type ID LPAREN params RPAREN
    (19) funheader_varargs -> . type ID LPAREN DOTS RPAREN
    (20) funheader_varargs -> . type ID LPAREN params COMMA DOTS RPAREN

    TYPE            shift and go to state 4

    funheader                      shift and go to state 16
    type                           shift and go to state 17
    funheader_varargs              shift and go to state 18

state 7

    (4) declaration -> globaldec .

    EXTERN          reduce using rule 4 (declaration -> globaldec .)
    STATIC          reduce using rule 4 (declaration -> globaldec .)
    TYPE            reduce using rule 4 (declaration -> globaldec .)
    $end            reduce using rule 4 (declaration -> globaldec .)


state 8

    (1) program -> declarations .
    (3) declarations -> declarations . declaration
    (4) declaration -> . globaldec
    (5) declaration -> . globaldef
    (6) declaration -> . fundec
    (7) declaration -> . fundef
    (8) globaldec -> . EXTERN type ID SEMICOL
    (9) globaldef -> . STATIC type ID ASSIGN expr SEMICOL
    (10) globaldef -> . type ID ASSIGN expr SEMICOL
    (11) fundec -> . EXTERN funheader SEMICOL
    (12) fundec -> . EXTERN funheader_varargs SEMICOL
    (13) fundef -> . funheader LBRACE RBRACE
    (14) fundef -> . funheader LBRACE statements RBRACE
    (15) fundef -> . STATIC funheader LBRACE RBRACE
    (16) fundef -> . STATIC funheader LBRACE statements RBRACE
    (74) type -> . TYPE
    (75) type -> . type BRACKETS
    (17) funheader -> . type ID LPAREN RPAREN
    (18) funheader -> . type ID LPAREN params RPAREN

    $end            reduce using rule 1 (program -> declarations .)
    EXTERN          shift and go to state 6
    STATIC          shift and go to state 12
    TYPE            shift and go to state 4

    globaldec                      shift and go to state 7
    fundef                         shift and go to state 1
    funheader                      shift and go to state 2
    fundec                         shift and go to state 9
    declaration                    shift and go to state 19
    type                           shift and go to state 5
    globaldef                      shift and go to state 11

state 9

    (6) declaration -> fundec .

    EXTERN          reduce using rule 6 (declaration -> fundec .)
    STATIC          reduce using rule 6 (declaration -> fundec .)
    TYPE            reduce using rule 6 (declaration -> fundec .)
    $end            reduce using rule 6 (declaration -> fundec .)


state 10

    (2) declarations -> declaration .

    EXTERN          reduce using rule 2 (declarations -> declaration .)
    STATIC          reduce using rule 2 (declarations -> declaration .)
    TYPE            reduce using rule 2 (declarations -> declaration .)
    $end            reduce using rule 2 (declarations -> declaration .)


state 11

    (5) declaration -> globaldef .

    EXTERN          reduce using rule 5 (declaration -> globaldef .)
    STATIC          reduce using rule 5 (declaration -> globaldef .)
    TYPE            reduce using rule 5 (declaration -> globaldef .)
    $end            reduce using rule 5 (declaration -> globaldef .)


state 12

    (9) globaldef -> STATIC . type ID ASSIGN expr SEMICOL
    (15) fundef -> STATIC . funheader LBRACE RBRACE
    (16) fundef -> STATIC . funheader LBRACE statements RBRACE
    (74) type -> . TYPE
    (75) type -> . type BRACKETS
    (17) funheader -> . type ID LPAREN RPAREN
    (18) funheader -> . type ID LPAREN params RPAREN

    TYPE            shift and go to state 4

    funheader                      shift and go to state 20
    type                           shift and go to state 21

state 13

    (13) fundef -> funheader LBRACE . RBRACE
    (14) fundef -> funheader LBRACE . statements RBRACE
    (23) statements -> . statement
    (24) statements -> . statements statement
    (25) statement -> . LBRACE RBRACE
    (26) statement -> . LBRACE statements RBRACE
    (27) statement -> . type ID ASSIGN expr SEMICOL
    (28) statement -> . type LBRACKET expr RBRACKET ID SEMICOL
    (29) statement -> . ID ASSIGN expr SEMICOL
    (30) statement -> . index ASSIGN expr SEMICOL
    (31) statement -> . ID MODIFY expr SEMICOL
    (32) statement -> . index MODIFY expr SEMICOL
    (33) statement -> . expr SEMICOL
    (34) statement -> . IF LPAREN expr RPAREN statement
    (35) statement -> . IF LPAREN expr RPAREN statement ELSE statement
    (36) statement -> . WHILE LPAREN expr RPAREN statement
    (37) statement -> . DO statement WHILE LPAREN expr RPAREN SEMICOL
    (38) statement -> . FOR LPAREN type ID ASSIGN expr TO expr RPAREN statement
    (39) statement -> . BREAK SEMICOL
    (40) statement -> . CONTINUE SEMICOL
    (41) statement -> . RETURN SEMICOL
    (42) statement -> . RETURN expr SEMICOL
    (74) type -> . TYPE
    (75) type -> . type BRACKETS
    (44) index -> . expr LBRACKET expr RBRACKET
    (43) expr -> . ID
    (45) expr -> . index
    (46) expr -> . LPAREN expr RPAREN
    (47) expr -> . expr PLUS expr
    (48) expr -> . expr MINUS expr
    (49) expr -> . expr TIMES expr
    (50) expr -> . expr DIVIDE expr
    (51) expr -> . expr MODULO expr
    (52) expr -> . expr EQ expr
    (53) expr -> . expr NE expr
    (54) expr -> . expr LT expr
    (55) expr -> . expr GT expr
    (56) expr -> . expr LE expr
    (57) expr -> . expr GE expr
    (58) expr -> . expr AND expr
    (59) expr -> . expr OR expr
    (60) expr -> . NOT expr
    (61) expr -> . MINUS expr
    (62) expr -> . INV expr
    (63) expr -> . funcall
    (68) expr -> . BOOLCONST
    (69) expr -> . CHARCONST
    (70) expr -> . INTCONST
    (71) expr -> . FLOATCONST
    (72) expr -> . HEXCONST
    (73) expr -> . STRINGCONST
    (64) funcall -> . ID LPAREN RPAREN
    (65) funcall -> . ID LPAREN exprs RPAREN

    RBRACE          shift and go to state 44
    LBRACE          shift and go to state 31
    ID              shift and go to state 33
    IF              shift and go to state 46
    WHILE           shift and go to state 42
    DO              shift and go to state 32
    FOR             shift and go to state 47
    BREAK           shift and go to state 41
    CONTINUE        shift and go to state 39
    RETURN          shift and go to state 30
    TYPE            shift and go to state 4
    LPAREN          shift and go to state 36
    NOT             shift and go to state 23
    MINUS           shift and go to state 37
    INV             shift and go to state 43
    BOOLCONST       shift and go to state 22
    CHARCONST       shift and go to state 38
    INTCONST        shift and go to state 28
    FLOATCONST      shift and go to state 35
    HEXCONST        shift and go to state 40
    STRINGCONST     shift and go to state 45

    statements                     shift and go to state 26
    statement                      shift and go to state 25
    funcall                        shift and go to state 24
    type                           shift and go to state 27
    index                          shift and go to state 34
    expr                           shift and go to state 29

state 14

    (75) type -> type BRACKETS .

    ID              reduce using rule 75 (type -> type BRACKETS .)
    BRACKETS        reduce using rule 75 (type -> type BRACKETS .)
    LBRACKET        reduce using rule 75 (type -> type BRACKETS .)


state 15

    (10) globaldef -> type ID . ASSIGN expr SEMICOL
    (17) funheader -> type ID . LPAREN RPAREN
    (18) funheader -> type ID . LPAREN params RPAREN

    ASSIGN          shift and go to state 49
    LPAREN          shift and go to state 48


state 16

    (11) fundec -> EXTERN funheader . SEMICOL

    SEMICOL         shift and go to state 50


state 17

    (8) globaldec -> EXTERN type . ID SEMICOL
    (75) type -> type . BRACKETS
    (17) funheader -> type . ID LPAREN RPAREN
    (18) funheader -> type . ID LPAREN params RPAREN
    (19) funheader_varargs -> type . ID LPAREN DOTS RPAREN
    (20) funheader_varargs -> type . ID LPAREN params COMMA DOTS RPAREN

    ID              shift and go to state 51
    BRACKETS        shift and go to state 14


state 18

    (12) fundec -> EXTERN funheader_varargs . SEMICOL

    SEMICOL         shift and go to state 52


state 19

    (3) declarations -> declarations declaration .

    EXTERN          reduce using rule 3 (declarations -> declarations declaration .)
    STATIC          reduce using rule 3 (declarations -> declarations declaration .)
    TYPE            reduce using rule 3 (declarations -> declarations declaration .)
    $end            reduce using rule 3 (declarations -> declarations declaration .)


state 20

    (15) fundef -> STATIC funheader . LBRACE RBRACE
    (16) fundef -> STATIC funheader . LBRACE statements RBRACE

    LBRACE          shift and go to state 53


state 21

    (9) globaldef -> STATIC type . ID ASSIGN expr SEMICOL
    (75) type -> type . BRACKETS
    (17) funheader -> type . ID LPAREN RPAREN
    (18) funheader -> type . ID LPAREN params RPAREN

    ID              shift and go to state 54
    BRACKETS        shift and go to state 14


state 22

    (68) expr -> BOOLCONST .

    SEMICOL         reduce using rule 68 (expr -> BOOLCONST .)
    PLUS            reduce using rule 68 (expr -> BOOLCONST .)
    MINUS           reduce using rule 68 (expr -> BOOLCONST .)
    TIMES           reduce using rule 68 (expr -> BOOLCONST .)
    DIVIDE          reduce using rule 68 (expr -> BOOLCONST .)
    MODULO          reduce using rule 68 (expr -> BOOLCONST .)
    EQ              reduce using rule 68 (expr -> BOOLCONST .)
    NE              reduce using rule 68 (expr -> BOOLCONST .)
    LT              reduce using rule 68 (expr -> BOOLCONST .)
    GT              reduce using rule 68 (expr -> BOOLCONST .)
    LE              reduce using rule 68 (expr -> BOOLCONST .)
    GE              reduce using rule 68 (expr -> BOOLCONST .)
    AND             reduce using rule 68 (expr -> BOOLCONST .)
    OR              reduce using rule 68 (expr -> BOOLCONST .)
    LBRACKET        reduce using rule 68 (expr -> BOOLCONST .)
    RPAREN          reduce using rule 68 (expr -> BOOLCONST .)
    RBRACKET        reduce using rule 68 (expr -> BOOLCONST .)
    COMMA           reduce using rule 68 (expr -> BOOLCONST .)
    TO              reduce using rule 68 (expr -> BOOLCONST .)


state 23

    (60) expr -> NOT . expr
    (43) expr -> . ID
    (45) expr -> . index
    (46) expr -> . LPAREN expr RPAREN
    (47) expr -> . expr PLUS expr
    (48) expr -> . expr MINUS expr
    (49) expr -> . expr TIMES expr
    (50) expr -> . expr DIVIDE expr
    (51) expr -> . expr MODULO expr
    (52) expr -> . expr EQ expr
    (53) expr -> . expr NE expr
    (54) expr -> . expr LT expr
    (55) expr -> . expr GT expr
    (56) expr -> . expr LE expr
    (57) expr -> . expr GE expr
    (58) expr -> . expr AND expr
    (59) expr -> . expr OR expr
    (60) expr -> . NOT expr
    (61) expr -> . MINUS expr
    (62) expr -> . INV expr
    (63) expr -> . funcall
    (68) expr -> . BOOLCONST
    (69) expr -> . CHARCONST
    (70) expr -> . INTCONST
    (71) expr -> . FLOATCONST
    (72) expr -> . HEXCONST
    (73) expr -> . STRINGCONST
    (44) index -> . expr LBRACKET expr RBRACKET
    (64) funcall -> . ID LPAREN RPAREN
    (65) funcall -> . ID LPAREN exprs RPAREN

    ID              shift and go to state 56
    LPAREN          shift and go to state 36
    NOT             shift and go to state 23
    MINUS           shift and go to state 37
    INV             shift and go to state 43
    BOOLCONST       shift and go to state 22
    CHARCONST       shift and go to state 38
    INTCONST        shift and go to state 28
    FLOATCONST      shift and go to state 35
    HEXCONST        shift and go to state 40
    STRINGCONST     shift and go to state 45

    funcall                        shift and go to state 24
    index                          shift and go to state 57
    expr                           shift and go to state 55

state 24

    (63) expr -> funcall .

    SEMICOL         reduce using rule 63 (expr -> funcall .)
    PLUS            reduce using rule 63 (expr -> funcall .)
    MINUS           reduce using rule 63 (expr -> funcall .)
    TIMES           reduce using rule 63 (expr -> funcall .)
    DIVIDE          reduce using rule 63 (expr -> funcall .)
    MODULO          reduce using rule 63 (expr -> funcall .)
    EQ              reduce using rule 63 (expr -> funcall .)
    NE              reduce using rule 63 (expr -> funcall .)
    LT              reduce using rule 63 (expr -> funcall .)
    GT              reduce using rule 63 (expr -> funcall .)
    LE              reduce using rule 63 (expr -> funcall .)
    GE              reduce using rule 63 (expr -> funcall .)
    AND             reduce using rule 63 (expr -> funcall .)
    OR              reduce using rule 63 (expr -> funcall .)
    LBRACKET        reduce using rule 63 (expr -> funcall .)
    RPAREN          reduce using rule 63 (expr -> funcall .)
    RBRACKET        reduce using rule 63 (expr -> funcall .)
    COMMA           reduce using rule 63 (expr -> funcall .)
    TO              reduce using rule 63 (expr -> funcall .)


state 25
